feat: filter /profiles endpoint based on allowed profiles